--- a/templates/series/index.html.twig
+++ b/templates/series/index.html.twig
@@ -9,13 +9,7 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Formulario de serie del controlador{{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp2/htdocs/proyectos_php/prueba/api_series/src/Controller/SeriesController.php'|file_link(0) }}">src/Controller/SeriesController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp2/htdocs/proyectos_php/prueba/api_series/templates/series/index.html.twig'|file_link(0) }}">templates/series/index.html.twig</a></code></li>
-    </ul>
+    <h1>Prueba de symfony 4.4 ✅</h1>
     <!--vamos a sacar con un bucle todas la series-->
     {{dump(series)}}
     {% for serie in series %}
